--- a/noisysinglecolornew.ipynb
+++ b/noisysinglecolornew.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyMcM8Nbfi0AJPu1upkwE9Wk",
+      "authorship_tag": "ABX9TyNClFlfrsL93ZxCJyLttM4L",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1305,9 +1305,9 @@
         "from tensorflow.keras import datasets, layers, models\n",
         "model = models.Sequential()\n",
         "model.add(layers.Conv2D(32, (3, 3), activation='relu', input_shape=(100, 100, 3)))\n",
-        "#model.add(layers.MaxPooling2D((2, 2)))\n",
+        "model.add(layers.MaxPooling2D((2, 2)))\n",
         "model.add(layers.Conv2D(64, (3, 3), activation='relu'))\n",
-        "#model.add(layers.MaxPooling2D((2, 2)))\n",
+        "model.add(layers.MaxPooling2D((2, 2)))\n",
         "model.add(layers.Conv2D(64, (3, 3), activation='relu'))"
       ],
       "metadata": {
@@ -1512,7 +1512,11 @@
           "name": "stdout",
           "text": [
             "Epoch 1/10\n",
-            " 5/32 [===>..........................] - ETA: 2:01 - loss: 989.4703 - acc: 0.3250 "
+            "32/32 [==============================] - 134s 4s/step - loss: 164.3902 - acc: 0.4600\n",
+            "Epoch 2/10\n",
+            "32/32 [==============================] - 130s 4s/step - loss: 1.9985 - acc: 0.4850\n",
+            "Epoch 3/10\n",
+            "27/32 [========================>.....] - ETA: 20s - loss: 1.7552 - acc: 0.5671"
           ]
         }
       ]
