--- a/singlecolorimages.ipynb
+++ b/singlecolorimages.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyNupIanNpARxY+KQjmuLYdp",
+      "authorship_tag": "ABX9TyN3I71ko1d6BqsFSA18xGqg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -58,6 +58,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "in this section we gerenerate 1000 images. each of them is single colored."
+      ],
+      "metadata": {
+        "id": "TuXiV8_RP05y"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "#generate original data\n",
@@ -80,6 +89,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "also we gerenerate 100 images for testing. each of them is single colored."
+      ],
+      "metadata": {
+        "id": "sjokVfMTQALu"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "#generate test data\n",
@@ -99,27 +117,24 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "for classifying iamges we must make 7 folder for 7 labels. we do this manually for both original images and test images."
+      ],
+      "metadata": {
+        "id": "iErxjgo6QHaV"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "mkdir black\n"
       ],
       "metadata": {
-        "id": "Weo8Wa5hGhz8",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "a5627773-8fed-44b4-ba10-39c8ef342fc7"
+        "id": "Weo8Wa5hGhz8"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "mkdir: cannot create directory ‘black’: File exists\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -127,22 +142,10 @@
         "mkdir blue\n"
       ],
       "metadata": {
-        "id": "-Rq3fgkFG3XK",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "3f140df8-4951-4dd3-a75d-93851f840600"
+        "id": "-Rq3fgkFG3XK"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "mkdir: cannot create directory ‘blue’: File exists\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -150,22 +153,10 @@
         "mkdir green\n"
       ],
       "metadata": {
-        "id": "HnGOMVagG8o5",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "f28dd193-0029-4e79-aa27-056c35737cfb"
+        "id": "HnGOMVagG8o5"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "mkdir: cannot create directory ‘green’: File exists\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -173,22 +164,10 @@
         "mkdir purple\n"
       ],
       "metadata": {
-        "id": "xB8Ncvo6G_s6",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "8aeed459-f9cf-45dc-e9f7-d5f705249428"
+        "id": "xB8Ncvo6G_s6"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "mkdir: cannot create directory ‘purple’: File exists\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -196,22 +175,10 @@
         "mkdir red\n"
       ],
       "metadata": {
-        "id": "gky7B1fRHCdj",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "7d48ea29-8bbe-4e4d-e3e9-a99978399caa"
+        "id": "gky7B1fRHCdj"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "mkdir: cannot create directory ‘red’: File exists\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -219,22 +186,10 @@
         "mkdir white\n"
       ],
       "metadata": {
-        "id": "tzey6qPqHFVq",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "80b19d10-2bbc-4e64-bb81-56186b7c545c"
+        "id": "tzey6qPqHFVq"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "mkdir: cannot create directory ‘white’: File exists\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -242,22 +197,10 @@
         "mkdir yellow"
       ],
       "metadata": {
-        "id": "bQMIqOUWHH5D",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "63a1f06b-16ad-4fd9-cb3b-e31aa983d6c6"
+        "id": "bQMIqOUWHH5D"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "mkdir: cannot create directory ‘yellow’: File exists\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -383,18 +326,11 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
-      "metadata": {
-        "id": "f3Y20rAjrOpR"
-      }
-    },
-    {
-      "cell_type": "markdown",
       "source": [
-        "you can see the last random creayed image."
+        ":After creating folders, we must guide images to corresponing folders. with an if-else we could know the color of each image. we do this by seeing only one pixel of the image."
       ],
       "metadata": {
-        "id": "q19VghtcrWhP"
+        "id": "f3Y20rAjrOpR"
       }
     },
     {
@@ -590,6 +526,15 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "And also for test images."
+      ],
+      "metadata": {
+        "id": "VLzFWyqLRE8R"
+      }
     },
     {
       "cell_type": "code",
@@ -822,6 +767,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "And now we start training."
+      ],
+      "metadata": {
+        "id": "tJ1Cx0iSRVeF"
+      }
     },
     {
       "cell_type": "code",
