--- a/noisysinglecolornew.ipynb
+++ b/noisysinglecolornew.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyNbTFOtJ4AUaFWAQHDRFPSU",
+      "authorship_tag": "ABX9TyPTSIfZIMrUrqPRHFNvwDhy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -210,11 +210,11 @@
         "ls"
       ],
       "metadata": {
-        "id": "tQYDh5mzfioy",
-        "outputId": "ce49b433-d672-49c4-f917-044394addda3",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "tQYDh5mzfioy",
+        "outputId": "ce49b433-d672-49c4-f917-044394addda3"
       },
       "execution_count": null,
       "outputs": [
@@ -287,11 +287,11 @@
         "cd noisyblue15/"
       ],
       "metadata": {
-        "id": "b_C4Llf2f9fP",
-        "outputId": "29342a61-505a-402f-a0ea-1da477e15ee9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "b_C4Llf2f9fP",
+        "outputId": "29342a61-505a-402f-a0ea-1da477e15ee9"
       },
       "execution_count": null,
       "outputs": [
@@ -310,11 +310,11 @@
         "ls"
       ],
       "metadata": {
-        "id": "bXwqcFzIgAtb",
-        "outputId": "0ca94d65-54df-4385-aed0-7a03d6569335",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "bXwqcFzIgAtb",
+        "outputId": "0ca94d65-54df-4385-aed0-7a03d6569335"
       },
       "execution_count": null,
       "outputs": [
@@ -464,12 +464,12 @@
         "print(labels_test[722])"
       ],
       "metadata": {
-        "id": "PUWYqN7jiGny",
-        "outputId": "7fed794f-eb5b-4b4c-8cd8-55629150f87a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 450
-        }
+        },
+        "id": "PUWYqN7jiGny",
+        "outputId": "7fed794f-eb5b-4b4c-8cd8-55629150f87a"
       },
       "execution_count": null,
       "outputs": [
@@ -1257,17 +1257,27 @@
       "source": [
         "import numpy as np\n",
         "model(numpydata_test)[722]\n",
+        "print(model(numpydata_test)[722])\n",
         "np.argmax(model(numpydata_test)[722])"
       ],
       "metadata": {
-        "id": "p4vQToGOiUrp",
-        "outputId": "7686f024-c7c2-47fb-ba00-5786b50b6aee",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "p4vQToGOiUrp",
+        "outputId": "4a3ed06e-d90f-4e47-d99d-72b7ac1e1477"
       },
       "execution_count": null,
       "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tf.Tensor(\n",
+            "[ 2.6114063  -4.4213905  -6.195866   -0.10071872  0.29045317  1.2520814\n",
+            "  2.730952   -5.4395328  -3.6727228  -5.4016643 ], shape=(10,), dtype=float32)\n"
+          ]
+        },
         {
           "output_type": "execute_result",
           "data": {
@@ -1276,9 +1286,18 @@
             ]
           },
           "metadata": {},
-          "execution_count": 29
+          "execution_count": 32
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "now test an image of another color. those image are blue and were predicted correctly."
+      ],
+      "metadata": {
+        "id": "WRBSztgyjhbS"
+      }
     },
     {
       "cell_type": "code",
@@ -1291,7 +1310,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "UeZdKlS5L31b",
-        "outputId": "de23bc16-2977-4b2e-8c49-ae2b0e217ccc"
+        "outputId": "d6f37ed2-f2b7-4391-b959-3d93efa20591"
       },
       "execution_count": null,
       "outputs": [
