--- a/singlecolorimages.ipynb
+++ b/singlecolorimages.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyN3I71ko1d6BqsFSA18xGqg",
+      "authorship_tag": "ABX9TyMyB12basVM03DLGlXTbS5s",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -282,7 +282,7 @@
     {
       "cell_type": "code",
       "source": [
-        "ls"
+        "cd"
       ],
       "metadata": {
         "colab": {
@@ -936,8 +936,13 @@
         "model.compile(optimizer='adam',\n",
         "              loss=tf.keras.losses.SparseCategoricalCrossentropy(from_logits=True),\n",
         "              metrics=['accuracy'])\n",
-        "\n",
-        "history = model.fit(numpydata, labels, epochs=10,validation_data=(numpydata_test, labels_test))"
+        "epochs=10\n",
+        "history = model.fit(\n",
+        "  train_ds,\n",
+        "  validation_data=val_ds,\n",
+        "  epochs=epochs\n",
+        ")\n",
+        "#history = model.fit(numpydata, labels, epochs=10,validation_data=(numpydata_test, labels_test))"
       ],
       "metadata": {
         "colab": {
@@ -988,13 +993,27 @@
     {
       "cell_type": "code",
       "source": [
-        "import matplotlib.pyplot as plt\n",
-        "plt.plot(history.history['accuracy'], label='accuracy')\n",
-        "plt.plot(history.history['val_accuracy'], label = 'val_accuracy')\n",
-        "plt.xlabel('Epoch')\n",
-        "plt.ylabel('Accuracy')\n",
-        "plt.ylim([0.5, 1])\n",
+        "acc = history.history['acc']\n",
+        "val_acc = history.history['val_acc']\n",
+        "\n",
+        "loss = history.history['loss']\n",
+        "val_loss = history.history['val_loss']\n",
+        "\n",
+        "epochs_range = range(epochs)\n",
+        "\n",
+        "plt.figure(figsize=(8, 8))\n",
+        "plt.subplot(1, 2, 1)\n",
+        "plt.plot(epochs_range, acc, label='Training Accuracy')\n",
+        "plt.plot(epochs_range, val_acc, label='Validation Accuracy')\n",
         "plt.legend(loc='lower right')\n",
+        "plt.title('Training and Validation Accuracy')\n",
+        "\n",
+        "plt.subplot(1, 2, 2)\n",
+        "plt.plot(epochs_range, loss, label='Training Loss')\n",
+        "plt.plot(epochs_range, val_loss, label='Validation Loss')\n",
+        "plt.legend(loc='upper right')\n",
+        "plt.title('Training and Validation Loss')\n",
+        "plt.show()\n",
         "\n",
         "test_loss, test_acc = model.evaluate(numpydata_test,  labels_test, verbose=2)"
       ],
