--- a/RNN2Forex.ipynb
+++ b/RNN2Forex.ipynb
@@ -736,6 +736,105 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
+      "source": [
+        "def LSTM_Conv3d(df_stock,epochs):\n",
+        "  X_train_series_sub,train_inputs,train_labels,X_valid_series_sub,val_inputs,val_labels,X_test_series_sub,test_inputs,test_labels = get_input_CNN(df_stock)\n",
+        "  layers = [tf.keras.layers.LSTMCell(units=n_neurons, activation='elu')\n",
+        "          for layer in range(n_layers)]\n",
+        "\n",
+        "  # Create a multi-layer RNN cell\n",
+        "  multi_layer_cell = tf.keras.layers.StackedRNNCells(layers)\n",
+        "\n",
+        "  input_layer = tf.keras.layers.Input(shape=(train_inputs.shape[1], train_inputs.shape[2]))\n",
+        "  lstm_layer = tf.keras.layers.LSTM(800,return_sequences=True,activation='relu')(input_layer)\n",
+        "  print(\"input layer...\"+str(input_layer.shape))\n",
+        "  conv1d_layer = tf.keras.layers.Conv1D(128,4,strides=1, padding='same',activation='relu')(lstm_layer)\n",
+        "  conv1d_layer = tf.keras.layers.Flatten()(conv1d_layer)\n",
+        "  conv1d_layer = tf.keras.layers.Reshape([32,10,8])(conv1d_layer)\n",
+        "  conv2d_layer = tf.keras.layers.Conv2D(128,4,strides=1, padding='same',activation='relu')(conv1d_layer)\n",
+        "  conv2d_layer = tf.keras.layers.Flatten()(conv2d_layer)\n",
+        "  conv2d_layer = tf.keras.layers.Reshape([32,16,10,8])(conv2d_layer)\n",
+        "  conv3d_layer = tf.keras.layers.Conv3D(128,4,strides=1, padding='same',activation='relu')(conv2d_layer)\n",
+        "\n",
+        "  flatten_concat = tf.keras.layers.Flatten()(conv3d_layer)\n",
+        "  output_layer = tf.keras.layers.Dense(n_steps*num_features)(flatten_concat)\n",
+        "  final_layer = tf.keras.layers.Reshape([n_steps, num_features])(output_layer)\n",
+        "  print(\"dense shape...\"+str(final_layer .shape))\n",
+        "\n",
+        "  model_cnn_lstm = tf.keras.Model(inputs=input_layer, outputs=final_layer)\n",
+        "  model_cnn_lstm.compile(loss=tf.keras.losses.MeanSquaredError(),\n",
+        "                  optimizer=tf.keras.optimizers.Adam(learning_rate = learning_rate),\n",
+        "                  metrics=[tf.keras.metrics.MeanAbsoluteError()])\n",
+        "  cnn_history = model_cnn_lstm.fit(train_inputs, train_labels, validation_data=(val_inputs, val_labels), epochs=epochs, verbose=2)\n",
+        "  pred = model_cnn_lstm.predict(test_inputs)\n",
+        "  mse, mae = model_cnn_lstm.evaluate(test_inputs)\n",
+        "  plot_target_predict(test_labels,pred)\n",
+        "  profit = calculate_profit(pred,test_inputs)\n",
+        "  print(\"profit....\"+str(profit))\n",
+        "  print(\"mse, mae....\"+str(mse)+\", \"+str(mae))\n",
+        "  return cnn_history,pred\n",
+        ""
+      ],
+      "metadata": {
+        "id": "gcHM1YR6UJrJ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def time_distributed_Concatenated(df_stock,epochs):\n",
+        "  X_train_series_sub,train_inputs,train_labels,X_valid_series_sub,val_inputs,val_labels,X_test_series_sub,test_inputs,test_labels = get_input_CNN(df_stock)\n",
+        "  layers = [tf.keras.layers.LSTMCell(units=n_neurons, activation='elu')\n",
+        "          for layer in range(n_layers)]\n",
+        "\n",
+        "  # Create a multi-layer RNN cell\n",
+        "  multi_layer_cell = tf.keras.layers.StackedRNNCells(layers)\n",
+        "\n",
+        "  input_layer = tf.keras.layers.Input(shape=(None, X_train_series_sub.shape[2], X_train_series_sub.shape[3]))\n",
+        "  conv1d_layer = tf.keras.layers.TimeDistributed(tf.keras.layers.Conv1D(filters=64, kernel_size=3, activation='relu'))(input_layer)\n",
+        "  maxpooling_layer = tf.keras.layers.TimeDistributed(tf.keras.layers.MaxPooling1D(pool_size=2))(conv1d_layer)\n",
+        "  flatten_layer = tf.keras.layers.TimeDistributed(tf.keras.layers.Flatten())(maxpooling_layer)\n",
+        "  lstm_layer = tf.keras.layers.LSTM(800,activation='relu')(flatten_layer)\n",
+        "  final_layer1 = tf.keras.layers.Flatten()(lstm_layer)\n",
+        "\n",
+        "  input_layer2 = tf.keras.layers.Reshape([n_steps, num_features])(input_layer)\n",
+        "  conv1d_layer = tf.keras.layers.Conv1D(128,4,strides=1, padding='same',activation='relu')(input_layer2)\n",
+        "  print(\"conv1d_layer...\"+str(conv1d_layer.shape))\n",
+        "\n",
+        "  lstm_layer = tf.keras.layers.LSTM(128,return_sequences=True,activation='relu')(input_layer2)\n",
+        "  attention = Attention()([lstm_layer, conv1d_layer])\n",
+        "  concat = tf.keras.layers.Concatenate(axis=-1)([attention, lstm_layer])\n",
+        "  flatten_concat = tf.keras.layers.Flatten()(concat)\n",
+        "\n",
+        "  concat = tf.keras.layers.Concatenate(axis=-1)([flatten_concat, final_layer1])\n",
+        "  flatten_concat = tf.keras.layers.Flatten()(concat)\n",
+        "  output_layer = tf.keras.layers.Dense(n_steps*num_features)(flatten_concat)\n",
+        "  final_layer2 = tf.keras.layers.Reshape([n_steps, num_features])(output_layer)\n",
+        "  print(\"dense shape...\"+str(final_layer2 .shape))\n",
+        "\n",
+        "  model_cnn_lstm = tf.keras.Model(inputs=input_layer, outputs=final_layer2)\n",
+        "  model_cnn_lstm.compile(loss=tf.keras.losses.MeanSquaredError(),\n",
+        "                  optimizer=tf.keras.optimizers.Adam(learning_rate = learning_rate),\n",
+        "                  metrics=[tf.keras.metrics.MeanAbsoluteError()])\n",
+        "  cnn_history = model_cnn_lstm.fit(X_train_series_sub, train_labels, validation_data=(X_valid_series_sub, val_labels), epochs=epochs, verbose=2)\n",
+        "  pred = model_cnn_lstm.predict(X_test_series_sub)\n",
+        "  mse, mae = model_cnn_lstm.evaluate(X_test_series_sub)\n",
+        "  plot_target_predict(test_labels,pred)\n",
+        "  profit = calculate_profit(pred,test_inputs)\n",
+        "  print(\"profit....\"+str(profit))\n",
+        "  print(\"mse, mae....\"+str(mse)+\", \"+str(mae))\n",
+        "  return  cnn_history,pred"
+      ],
+      "metadata": {
+        "id": "-InAFRCwUTf5"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "**Results of Stacked RNN in different currency pairs:**"
